--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1376,10 +1376,10 @@ jobs:
       image: ubuntu-2004:202104-01
       docker_layer_caching: true
     parameters:
-      version:
-        description: Magma version
+      aws_account:
+        description: AWS account to push to
         type: string
-        default: "1.5"
+        default: "FB"
     environment:
       MAGMA_ROOT: /home/circleci/project
       CODE_DIR: /home/circleci/project/experimental/cloudstrapper
@@ -1397,10 +1397,17 @@ jobs:
               pip install ansible awscli boto3
               sudo apt-get update
       - run:
-          name: Propagate secrets to ansible
+          name: Propagate AWS credentials to ansible and create version
           command: |
-            sed -i -e "s@awsAccessKey:@& ${AWS_ACCESS_KEY_AMI_QUENTIN}@1"  $VARS_DIR/secrets.yaml
-            sed -i -e "s@awsSecretKey:@& ${AWS_SECRET_ACCESS_KEY_AMI_QUENTIN}@1"  $VARS_DIR/secrets.yaml
+            if [ "<<parameters.aws_account>>" = "FB" ]; then
+              sed -i -e "s@awsAccessKey:@& ${AWS_ACCESS_KEY_AMI_QUENTIN}@1"  $VARS_DIR/secrets.yaml
+              sed -i -e "s@awsSecretKey:@& ${AWS_SECRET_ACCESS_KEY_AMI_QUENTIN}@1"  $VARS_DIR/secrets.yaml
+              echo export VERSION="$(cd $MAGMA_ROOT && git describe --tags `git rev-list --tags --max-count=1`)$CIRCLE_BUILD_NUM" >> $BASH_ENV
+            elif  [ "<<parameters.aws_account>>" = "LF" ]; then
+              sed -i -e "s@awsAccessKey:@& ${AWS_ACCESS_KEY_AMI_LF}@1"  $VARS_DIR/secrets.yaml
+              sed -i -e "s@awsSecretKey:@& ${AWS_SECRET_ACCESS_KEY_AMI_LF}@1"  $VARS_DIR/secrets.yaml
+              echo export VERSION="$(cd $MAGMA_ROOT && git describe --tags `git rev-list --tags --max-count=1`)" >> $BASH_ENV
+            fi
       - run:
           name: Propagate AWS region information
           command: |
@@ -1428,7 +1435,7 @@ jobs:
             sed -i -e '/^primaryCloudstrapper: /s/:.*$/: publishAmisToMarketplacePrimaryCloudstrapper/' $VARS_DIR/defaults.yaml
             sed -i -e '/^stackDevOpsCloudstrapper: /s/:.*$/: publish-amis-to-marketplace-stack-devopscloustrapper/' $VARS_DIR/defaults.yaml
             sed -i -e '/^stackCloudstrapper: /s/:.*$/: publish-amis-to-marketplace-stack-cloustrapper/' $VARS_DIR/defaults.yaml
-            sed -i -e '/^devOpsAmi: /s/:.*$/: cloudstrapper-<<parameters.version>>/' $VARS_DIR/defaults.yaml
+            sed -i -e '/^devOpsAmi: /s/:.*$/: cloudstrapper-$VERSION/' $VARS_DIR/defaults.yaml
             sed -i -e '/^buildUbuntuAmi: /s/:.*$/: ami-0d382e80be7ffdae5/' $VARS_DIR/build.yaml
       - run:
           name: Generate Cloudstrapper AMI
@@ -1440,11 +1447,11 @@ jobs:
             ansible-playbook $WORK_DIR/devops-init.yaml -e "dirLocalInventory=$VARS_DIR"
       - notify-magma:
           artifact_name: Cloudstrapper AWS AMI
-          version_path: "<<parameters.version>>"
+          version_path: $VERSION
       - run:
           name: Propagate variables for AGW AMI build
           command: |
-            sed -i -e '/^buildAgwAmiName: /s/:.*$/: agw-ami-<<parameters.version>>/' $VARS_DIR/build.yaml
+            sed -i -e '/^buildAgwAmiName: /s/:.*$/: agw-ami-$VERSION/' $VARS_DIR/build.yaml
             sed -i -e '/^buildGwTagName: /s/:.*$/: publishAmisToMarketplaceAgw/' $VARS_DIR/build.yaml
             sed -i -e '/^awsAgwAmi: /s/:.*$/: ami-0d382e80be7ffdae5/' $VARS_DIR/cluster.yaml
       - run:
@@ -1461,7 +1468,7 @@ jobs:
             ansible-playbook $WORK_DIR/cleanup.yaml -e "dirLocalInventory=$VARS_DIR" --tags agw,subnet,secgroup,vpc,keys --skip-tags orc8r  -e "{"deleteStacks": [stackDevOpspublishAmisToMarketplaceAgw, publish-amis-to-marketplace-stack-devopscloustrapper, publish-amis-to-marketplace-stack]}"
       - notify-magma:
           artifact_name: AGW AWS AMI
-          version_path: "<<parameters.version>>"
+          version_path: $VERSION
       - magma_slack_notify
 workflows:
   version: 2
@@ -1589,6 +1596,14 @@ workflows:
     jobs:
       - xwfm-test:
           notify_magma_ci: false
+
+  weekly_ami_push:
+    triggers:
+      - schedule:
+          cron: "0 0 * * 0"
+          <<: *only_master
+    jobs:
+      - publish-amis-to-marketplace
 
   nms:
     jobs:
