--- a/experimental/cloudstrapper/playbooks/ami-configure.yaml
+++ b/experimental/cloudstrapper/playbooks/ami-configure.yaml
@@ -2,7 +2,7 @@
 - hosts: "{{ aminode }}"
   roles:
     - magma-agw-1.5
-    - clean-authorized-keys
+    - {role: clean-authorized-keys, tags: clearSSHKeys}
   vars:
     ansible_ssh_private_key_file: "{{ dirLocalInventory }}/{{ keyHost }}.pem"
   vars_files:
