[component: agw] Session Release & UE Deregister
Fixes included :
  1. PDU Session Release
  2. UE Deregistration

Testcases :
  1. Unit Testcases of ngap
  2. Testing of PDU Session Release on UERANSIM
  3. Testing of UE Deregistration on UERANSIM
  4. Testing on DSTester

Signed-off-by: YOGESH PANDEY <yogesh@wavelabs.ai>

--- a/lte/gateway/c/oai/tasks/nas5g/CMakeLists.txt
+++ b/lte/gateway/c/oai/tasks/nas5g/CMakeLists.txt
@@ -34,6 +34,7 @@ set(libnas_src_OBJS
 	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GPDUSessionModificationReject.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GPDUSessionReleaseRequest.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GPDUSessionReleaseReject.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GPDUSessionReleaseCommand.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/SmfMessage.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GULNASTransport.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GDLNASTransport.cpp
