--- a/experimental/cloudstrapper/playbooks/roles/aws-cleanup/tasks/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/aws-cleanup/tasks/main.yaml
@@ -9,5 +9,5 @@
   tags: orc8r
 - include: keys.yaml
   environment:
-    AWS_DEFAULT_REGION: "{{ awsOrc8rRegion }}"
+    AWS_DEFAULT_REGION: "{{ awsAgwRegion }}"
   tags: [keys, never]
