Update C_BUILD includes directory path
Docker builds define C_BUILD as /build/c update the build path
to add a trailing / to create the right filesystem path

Signed-off-by: Amar Padmanabhan <amarpadmanabhan@fb.com>

--- a/orc8r/gateway/c/common/config/CMakeLists.txt
+++ b/orc8r/gateway/c/common/config/CMakeLists.txt
@@ -17,7 +17,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(MAGMA_LOGGING REQUIRED)
-set(MAGMA_INCLUDE_DIR $ENV{C_BUILD}common/includes)
+set(MAGMA_INCLUDE_DIR $ENV{C_BUILD}/common/includes)
 
 add_library(MAGMA_CONFIG
     MConfigLoader.cpp
